Name:                http-test
Version:             0.1
Description:         Test framework for HTTP APIs
License:             BSD3
Author:              OpenBrain Ltd
Maintainer:          tomn@openbrain.org
build-type:          Simple
Cabal-Version:       >= 1.8

Library
   Exposed-modules: Test.HTTP
   Build-depends: base                          >= 4          && < 5
                , HTTP                          >= 4000.2        && < 4000.3
                , network                       >= 2.4 && < 2.5
                , mtl                           >= 2.1        && < 2.2
                , curl                          >= 1.3.8      && < 2
                , aeson
                , safe                          >= 0.2        && < 0.4
                , stm                           >= 2.4        && < 2.5
                , text
                , bytestring

executable    test-http-test
  main-is: test.hs
  Build-depends: base                          >= 4          && < 5
                , HTTP                          >= 4000.2        && < 4000.3
                , network                       >= 2.4 && < 2.5
                , mtl                           >= 2.1        && < 2.2
                , curl                          >= 1.3.8      && < 2
                , aeson
                , safe                          >= 0.2        && < 0.4
                , stm                           >= 2.4        && < 2.5
                , text
                , bytestring
                , http-test
